package com.teamnab.demo.model;

public class Facultad {

	public int id;
	public String acronimo;
	public String nombre;
	public int universidadId;

	
	
	
	
}
