package com.teamnab.demo.model;

public class Modulo {

	public int id;
	public String nombre;
	
}
