package com.teamnab.demo.model;

public class PrestamoDetalle {
	private int Id;
	private int LibroId;
	private int Cantidad;
	private int PrestamoId;
	
	
	
	
}
